增加web端通知提示

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "zgx-sandra"
+    "default": "zgx-sandra",
+    "yiyisanra": "project-1731787035673686380"
   }
 }
