--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,14 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "firebase-admin": "~4.1.2",
-    "firebase-functions": "^0.5"
+    "firebase-functions":"^0.5",
+    "@google-cloud/storage": "^0.4.0",
+    "@google-cloud/vision": "^0.5.0",
+    "child-process-promise": "^2.2.0",
+    "mkdirp": "^0.5.1",
+    "mkdirp-promise": "^4.0.0",
+    "request-promise": "^2.0.0",
+    "baidu-ocr-api":"^2.0.5"
   },
   "private": true
 }
